--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             <a href="#">Geschichte</a>
                             <a href="#"> Vorstand </a>
                             <a href="#"> Funktionäre</a>
-                            <a href="#"> Kontakt</a>
+                            <a href="Kontakt.html"> Kontakt</a>
                         </div>
                     </div>
                 </li> 
