--- a/Kontakt.html
+++ b/Kontakt.html
@@ -3,12 +3,15 @@
 	<head>
 		<title> Kontakt </title>
 		<meta charset="utf-8">
-        <link rel="stylesheet" href="CSS.css">
+        <link rel="stylesheet" type="text/css" href="CSS.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
     <body>
         <header>
             <div class="navi">
                 <label for="toggle">&#9776;</label>
+                <input type="checkbox" id="toggle"/>
                 <div class="menu">
                     <a href="#">News </a>
                     <a href="#">Kader </a>
@@ -16,7 +19,7 @@
                     <a href="#">Klub </a>
                     <a href="#">Fans </a>
                     <a href="#">Sponsoren </a>
-                    <a href="#">Stadion </a>
+                    <a href="#"><span> Stadion</span> </a>
                 
                 </div>
                     
