--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="nav">
             <label for="toggle"> &#9776;</label>
-            <img src="Logo%20Neu.png">
+            <img src="Bilder/Logo%20Neu.png">
             <input type="checkbox" id="toggle"/>
             <div class="menu">
                 <a href="#"> <span> Home</span></a>
